--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,27 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QLNhaHang
 excludes=
+file.reference.commons-codec-1.11.jar=C:\\Users\\admin\\Desktop\\Tainguyen\\thuvienpoi\\commons-codec-1.11.jar
+file.reference.commons-collections4-4.2.jar=C:\\Users\\admin\\Desktop\\Tainguyen\\thuvienpoi\\commons-collections4-4.2.jar
+file.reference.commons-compress-1.18.jar=C:\\Users\\admin\\Desktop\\Tainguyen\\thuvienpoi\\commons-compress-1.18.jar
 file.reference.mssql-jdbc-8.2.2.jre13.jar=C:\\Users\\HP\\Downloads\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre13.jar
+file.reference.mssql-jdbc-8.2.2.jre8.jar=C:\\Users\\admin\\Desktop\\Tainguyen\\mssql-jdbc-8.2.2.jre8.jar
+file.reference.poi-4.0.1.jar=C:\\Users\\admin\\Desktop\\Tainguyen\\thuvienpoi\\poi-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=C:\\Users\\admin\\Desktop\\Tainguyen\\thuvienpoi\\poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=C:\\Users\\admin\\Desktop\\Tainguyen\\thuvienpoi\\poi-ooxml-schemas-4.0.1.jar
+file.reference.xmlbeans-3.0.2.jar=C:\\Users\\admin\\Desktop\\Tainguyen\\thuvienpoi\\xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-8.2.2.jre13.jar}
+    ${file.reference.mssql-jdbc-8.2.2.jre13.jar}:\
+    ${file.reference.mssql-jdbc-8.2.2.jre8.jar}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
